# llm-scadalts-integration

./: .env.example  .gitignore  PROJETO_SCADA_AGENT.md  PROPOSTA_EVOLUCAO_V2.md  README.md  debug_state.py  demo.py  main.py  pyproject.toml  requirements.txt  test_read_write.py
docs/: INSTALL_GUIDE.md  PROJETO_SCADA_AGENT.md  PROPOSTA_EVOLUCAO_V2.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
src/: __init__.py  config.py  data_collector.py  llm_agent.py  point_manager.py  scada_client.py  server.py
